--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
